<resources>
    <string name="app_name">Unorganized Trip</string>

    <!--Home page-->
    <string name="title">Bienvenue sur Unorganized Trip!</string>
    <string name="choice">Sélectionnez une destination et un budget :</string>
    <string name="monaco">Monaco</string>
    <string name="bordeaux">Bordeaux</string>
    <string name="lyon">Lyon</string>
    <string name="budget">Budget</string>
    <string name="inProgress">Roadtrip en cours de développement</string>

    <!--Buttons-->
    <string name="validate">Valider</string>
    <string name="swapTrip">Tous les trajets</string>

    <string name="backToTrip">Revenir aux détails du trajet</string>

    <string name="lowBudget">Voyage petit budget</string>
    <string name="classicBudget">Voyage classique</string>
    <string name="highBudget">Voyage prestige</string>

    <!--Default values-->
    <string name="coError">Erreur de connexion</string>
    <string name="text">texte</string>
    <string name="image">image</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>